Remove 'capture' feature, allow update-by-time
